--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name=cf_sender_policy_flattener
-version=22.02.16
+version=22.02.17
 author = gunville
 author_email = rk13088@yahoo.com
 description = Flattens SPF records and updates Cloudflare zones
@@ -23,7 +23,7 @@ package_dir =
 packages = find:
 install_requires =
     cloudflare>=2.8.15
-    sender-policy-flattener>=0.3.1
+    sender-policy-flattener==0.3.1
 python_requires = >=3.6
 scripts = 
     scripts/cfspflat
